added JunitXmlReport and updated the CodeQualityMetricsConverter